--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.com/arthuraugusn/front-end-tcc-2023-1-g2-vanbora",
   "name": "front-end-tcc-2023-1-g2-vanbora",
   "version": "0.1.0",
   "private": true,
